// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header matches the snapshot 1`] = `
<div
  class="css-je2ttv"
>
  <div
    class="css-13c7hhw"
  >
    Header content
  </div>
</div>
`;

exports[`PaddedContainer matches the snapshot 1`] = `
<div
  class="ui container css-11wtz8p"
>
  Header content
</div>
`;
